# CODE.OMDALA.COM

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_CONVENTIONS.md  Founder_Onboarding_Script.md  IAI_DEV_WEEK_1_EXECUTION_CHECKLIST.md  IAI_VITANET_EXECUTION_PLAN_V2_LOCKED.md  IAI_VITANET_SOVEREIGN_MESH_OS_EXECUTION_V3_LOCKED.md  LICENSE  LifeDashboard.tsx  MCP_SERVERS.md  OMCODE_API_GATEWAY_SPEC.md  OMCODE_IMPLEMENTATION_ORDER.md  OMCODE_INFORMATION_ARCHITECTURE.md  OMCODE_MAC_APP_ARCHITECTURE.md  OMCODE_MASTER_PLAN_2026.md  OMCODE_MCP_STRATEGY.md  OMCODE_REPO_STRUCTURE.md  OMCODE_UI_SCREEN_MAP.md  OMCODE_WEB_PUBLIC_SEO_ARCHITECTURE.md  README.md  SECURITY_MODEL.md  TEST_STRATEGY.md  biome.json  flow-weekly-checkin-v1.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: package.json  wrangler.toml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/docs/: package.json
apps/web/: next.config.ts  package.json  tsconfig.json
docs-internal/: CONTRIBUTING.md  QUICKSTART.md  USER_MANUAL.md
duongsaotoasang-web-old/: wrangler.toml
nft.iai.one/: .dev.vars.example  LIVE-DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  robots.txt  sitemap.xml  wrangler.toml
nhachung.org/: wrangler.toml
scripts/: bootstrap-mac.sh
tranhatam.com/: VERSIONS.md
(+129 files in other folders)
