[package]
name = "omcode"
version = "0.1.0-alpha"
description = "OMCODE Desktop App"
authors = ["Tran Ha Tam"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.1.0"
tauri-plugin-fs = "2.1.0"
tauri-plugin-shell = "2.1.0"
